objects/Order__x.object
<CustomObject>
    <externalDataSource>awsDynamodbXds</externalDataSource>
    <externalName>northwind</externalName>
    <fields>
        <fullName>Customer__c</fullName>
        <externalDeveloperName>customerID</externalDeveloperName>
        <label>Customer</label>
        <length>50</length>
        <referenceTargetField>Account.Customer_ID__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <externalDeveloperName>employeeID</externalDeveloperName>
        <label>Employee ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <externalDeveloperName>FreightPrice</externalDeveloperName>
        <label>Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <externalDeveloperName>orderDate</externalDeveloperName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_ID__c</fullName>
        <externalDeveloperName>pk</externalDeveloperName>
        <label>Order ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Date__c</fullName>
        <externalDeveloperName>required</externalDeveloperName>
        <label>Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Address__c</fullName>
        <externalDeveloperName>shipAddress</externalDeveloperName>
        <label>Ship Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_City__c</fullName>
        <externalDeveloperName>shipCity</externalDeveloperName>
        <label>Ship City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Country__c</fullName>
        <externalDeveloperName>shipCountry</externalDeveloperName>
        <label>Ship Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Name__c</fullName>
        <externalDeveloperName>shipName</externalDeveloperName>
        <label>Ship Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Postal_Code__c</fullName>
        <externalDeveloperName>shipPostalCode</externalDeveloperName>
        <label>Ship Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Region__c</fullName>
        <externalDeveloperName>shipRegion</externalDeveloperName>
        <label>Ship Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Via__c</fullName>
        <externalDeveloperName>shipVia</externalDeveloperName>
        <label>Ship Via</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_Date__c</fullName>
        <externalDeveloperName>shipped</externalDeveloperName>
        <label>Shipped Date</label>
        <type>Date</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Order_ID__c</columns>
        <columns>Customer__c</columns>
        <columns>Employee_ID__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Required_Date__c</columns>
        <columns>Shipped_Date__c</columns>
        <columns>Ship_Via__c</columns>
        <columns>Freight__c</columns>
        <columns>Ship_Address__c</columns>
        <columns>Ship_City__c</columns>
        <columns>Ship_Country__c</columns>
        <columns>Ship_Name__c</columns>
        <columns>Ship_Postal_Code__c</columns>
        <columns>Ship_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Orders</pluralLabel>
</CustomObject>